sensor characterization plots

--- a/Rapid inference.ipynb
+++ b/Rapid inference.ipynb
@@ -338,8 +338,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-30T14:26:29.615125Z",
-     "start_time": "2025-09-30T14:26:24.605915Z"
+     "end_time": "2025-10-28T10:38:20.618525Z",
+     "start_time": "2025-10-28T10:38:15.991666Z"
     }
    },
    "cell_type": "code",
@@ -353,6 +353,25 @@
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from scipy.stats import loguniform\n",
+    "\n",
+    "def align_X_test_to_train(X_train, X_test, fill=0.0):\n",
+    "    \"\"\"\n",
+    "    Return X_test with the same 2D shape (N_test, D_train) expected by a model\n",
+    "    trained on X_train. If X_test has fewer columns, pad on the right with `fill`.\n",
+    "    If it has more, truncate on the right.\n",
+    "    \"\"\"\n",
+    "    if X_train.ndim != 2 or X_test.ndim != 2:\n",
+    "        raise ValueError(\"Both X_train and X_test must be 2-D arrays.\")\n",
+    "    D_train = X_train.shape[1]\n",
+    "    D_test = X_test.shape[1]\n",
+    "    if D_test == D_train:\n",
+    "        return X_test\n",
+    "    # allocate and copy\n",
+    "    X_new = np.full((X_test.shape[0], D_train), fill, dtype=X_test.dtype)\n",
+    "    cols = min(D_test, D_train)\n",
+    "    X_new[:, :cols] = X_test[:, :cols]\n",
+    "    return X_new\n",
+    "\n",
     "\n",
     "# from your_module import load, get_samples\n",
     "\n",
@@ -416,6 +435,8 @@
     "    # Guard for tiny datasets\n",
     "    n_splits = max(2, min(3, n_train))\n",
     "    cv = KFold(n_splits=n_splits, shuffle=True, random_state=42)\n",
+    "    # Align reduced-frame X_test to the training dimensionality\n",
+    "    X_test = align_X_test_to_train(X_train, X_test)\n",
     "\n",
     "    # --- Linear ---\n",
     "    clf_lin = svm.SVC(kernel=\"linear\")\n",
@@ -499,9 +520,7 @@
     "        print(f\"\\n[n_sample={ns}] best (k,p): —\")\n",
     "    else:\n",
     "        print(f\"\\n[n_sample={ns}] best (k,p) from grid: k={bc['k']}, p={bc['p']:.1f} (mean_acc={bc['mean_test_acc']:.4f})\")\n",
-    "    row = results[ns]\n",
-    "    for kernel in [\"linear\", \"rbf\", \"poly\", \"sigmoid\"]:\n",
-    "        info = row[kern]()\n"
+    "    row = results[ns]\n"
    ],
    "id": "2a94a319402aaa89",
    "outputs": [
@@ -519,35 +538,174 @@
       "  n_sample=7: k=10, p=0.9, mean_acc=0.9067\n",
       "  n_sample=8: k=15, p=1.0, mean_acc=0.9227\n",
       "  n_sample=9: k=20, p=0.3, mean_acc=0.9520\n",
-      "  n_sample=10: k=10, p=1.0, mean_acc=0.9680\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "X has 8 features, but SVC is expecting 144 features as input.",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[20], line 77\u001B[0m\n\u001B[1;32m     75\u001B[0m clf_lin \u001B[38;5;241m=\u001B[39m svm\u001B[38;5;241m.\u001B[39mSVC(kernel\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mlinear\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m     76\u001B[0m clf_lin\u001B[38;5;241m.\u001B[39mfit(X_train, Y_train)\n\u001B[0;32m---> 77\u001B[0m y_lin \u001B[38;5;241m=\u001B[39m \u001B[43mclf_lin\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mpredict\u001B[49m\u001B[43m(\u001B[49m\u001B[43mX_test\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     78\u001B[0m results[ns][\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mlinear\u001B[39m\u001B[38;5;124m\"\u001B[39m] \u001B[38;5;241m=\u001B[39m {\n\u001B[1;32m     79\u001B[0m     \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124macc\u001B[39m\u001B[38;5;124m\"\u001B[39m: metrics\u001B[38;5;241m.\u001B[39maccuracy_score(Y_test, y_lin)\n\u001B[1;32m     80\u001B[0m }\n\u001B[1;32m     82\u001B[0m \u001B[38;5;66;03m# --- RBF (tuned) ---\u001B[39;00m\n",
-      "File \u001B[0;32m~/venvs/torch/lib/python3.9/site-packages/sklearn/svm/_base.py:822\u001B[0m, in \u001B[0;36mBaseSVC.predict\u001B[0;34m(self, X)\u001B[0m\n\u001B[1;32m    820\u001B[0m     y \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39margmax(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mdecision_function(X), axis\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1\u001B[39m)\n\u001B[1;32m    821\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[0;32m--> 822\u001B[0m     y \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43msuper\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mpredict\u001B[49m\u001B[43m(\u001B[49m\u001B[43mX\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    823\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mclasses_\u001B[38;5;241m.\u001B[39mtake(np\u001B[38;5;241m.\u001B[39masarray(y, dtype\u001B[38;5;241m=\u001B[39mnp\u001B[38;5;241m.\u001B[39mintp))\n",
-      "File \u001B[0;32m~/venvs/torch/lib/python3.9/site-packages/sklearn/svm/_base.py:436\u001B[0m, in \u001B[0;36mBaseLibSVM.predict\u001B[0;34m(self, X)\u001B[0m\n\u001B[1;32m    420\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21mpredict\u001B[39m(\u001B[38;5;28mself\u001B[39m, X):\n\u001B[1;32m    421\u001B[0m \u001B[38;5;250m    \u001B[39m\u001B[38;5;124;03m\"\"\"Perform regression on samples in X.\u001B[39;00m\n\u001B[1;32m    422\u001B[0m \n\u001B[1;32m    423\u001B[0m \u001B[38;5;124;03m    For an one-class model, +1 (inlier) or -1 (outlier) is returned.\u001B[39;00m\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m    434\u001B[0m \u001B[38;5;124;03m        The predicted values.\u001B[39;00m\n\u001B[1;32m    435\u001B[0m \u001B[38;5;124;03m    \"\"\"\u001B[39;00m\n\u001B[0;32m--> 436\u001B[0m     X \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_validate_for_predict\u001B[49m\u001B[43m(\u001B[49m\u001B[43mX\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    437\u001B[0m     predict \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_sparse_predict \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_sparse \u001B[38;5;28;01melse\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_dense_predict\n\u001B[1;32m    438\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m predict(X)\n",
-      "File \u001B[0;32m~/venvs/torch/lib/python3.9/site-packages/sklearn/svm/_base.py:614\u001B[0m, in \u001B[0;36mBaseLibSVM._validate_for_predict\u001B[0;34m(self, X)\u001B[0m\n\u001B[1;32m    611\u001B[0m check_is_fitted(\u001B[38;5;28mself\u001B[39m)\n\u001B[1;32m    613\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28mcallable\u001B[39m(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mkernel):\n\u001B[0;32m--> 614\u001B[0m     X \u001B[38;5;241m=\u001B[39m \u001B[43mvalidate_data\u001B[49m\u001B[43m(\u001B[49m\n\u001B[1;32m    615\u001B[0m \u001B[43m        \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[1;32m    616\u001B[0m \u001B[43m        \u001B[49m\u001B[43mX\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    617\u001B[0m \u001B[43m        \u001B[49m\u001B[43maccept_sparse\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mcsr\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[1;32m    618\u001B[0m \u001B[43m        \u001B[49m\u001B[43mdtype\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mnp\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mfloat64\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    619\u001B[0m \u001B[43m        \u001B[49m\u001B[43morder\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mC\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[1;32m    620\u001B[0m \u001B[43m        \u001B[49m\u001B[43maccept_large_sparse\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mFalse\u001B[39;49;00m\u001B[43m,\u001B[49m\n\u001B[1;32m    621\u001B[0m \u001B[43m        \u001B[49m\u001B[43mreset\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mFalse\u001B[39;49;00m\u001B[43m,\u001B[49m\n\u001B[1;32m    622\u001B[0m \u001B[43m    \u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    624\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_sparse \u001B[38;5;129;01mand\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m sp\u001B[38;5;241m.\u001B[39missparse(X):\n\u001B[1;32m    625\u001B[0m     X \u001B[38;5;241m=\u001B[39m sp\u001B[38;5;241m.\u001B[39mcsr_matrix(X)\n",
-      "File \u001B[0;32m~/venvs/torch/lib/python3.9/site-packages/sklearn/utils/validation.py:2965\u001B[0m, in \u001B[0;36mvalidate_data\u001B[0;34m(_estimator, X, y, reset, validate_separately, skip_check_array, **check_params)\u001B[0m\n\u001B[1;32m   2962\u001B[0m     out \u001B[38;5;241m=\u001B[39m X, y\n\u001B[1;32m   2964\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m no_val_X \u001B[38;5;129;01mand\u001B[39;00m check_params\u001B[38;5;241m.\u001B[39mget(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mensure_2d\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;28;01mTrue\u001B[39;00m):\n\u001B[0;32m-> 2965\u001B[0m     \u001B[43m_check_n_features\u001B[49m\u001B[43m(\u001B[49m\u001B[43m_estimator\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mX\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mreset\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mreset\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m   2967\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m out\n",
-      "File \u001B[0;32m~/venvs/torch/lib/python3.9/site-packages/sklearn/utils/validation.py:2829\u001B[0m, in \u001B[0;36m_check_n_features\u001B[0;34m(estimator, X, reset)\u001B[0m\n\u001B[1;32m   2826\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m\n\u001B[1;32m   2828\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m n_features \u001B[38;5;241m!=\u001B[39m estimator\u001B[38;5;241m.\u001B[39mn_features_in_:\n\u001B[0;32m-> 2829\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\n\u001B[1;32m   2830\u001B[0m         \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mX has \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mn_features\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m features, but \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mestimator\u001B[38;5;241m.\u001B[39m\u001B[38;5;18m__class__\u001B[39m\u001B[38;5;241m.\u001B[39m\u001B[38;5;18m__name__\u001B[39m\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m   2831\u001B[0m         \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mis expecting \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mestimator\u001B[38;5;241m.\u001B[39mn_features_in_\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m features as input.\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m   2832\u001B[0m     )\n",
-      "\u001B[0;31mValueError\u001B[0m: X has 8 features, but SVC is expecting 144 features as input."
+      "  n_sample=10: k=10, p=1.0, mean_acc=0.9680\n",
+      "\n",
+      "=== Accuracy per n_sample (train+test built with n_frames=ns) ===\n",
+      "\n",
+      "[n_sample=1] best (k,p) from grid: k=15, p=0.7 (mean_acc=0.5533)\n",
+      "\n",
+      "[n_sample=2] best (k,p) from grid: k=15, p=0.5 (mean_acc=0.6120)\n",
+      "\n",
+      "[n_sample=3] best (k,p) from grid: k=20, p=0.7 (mean_acc=0.7427)\n",
+      "\n",
+      "[n_sample=4] best (k,p) from grid: k=15, p=0.7 (mean_acc=0.7960)\n",
+      "\n",
+      "[n_sample=5] best (k,p) from grid: k=15, p=0.8 (mean_acc=0.8320)\n",
+      "\n",
+      "[n_sample=6] best (k,p) from grid: k=15, p=1.0 (mean_acc=0.8920)\n",
+      "\n",
+      "[n_sample=7] best (k,p) from grid: k=10, p=0.9 (mean_acc=0.9067)\n",
+      "\n",
+      "[n_sample=8] best (k,p) from grid: k=15, p=1.0 (mean_acc=0.9227)\n",
+      "\n",
+      "[n_sample=9] best (k,p) from grid: k=20, p=0.3 (mean_acc=0.9520)\n",
+      "\n",
+      "[n_sample=10] best (k,p) from grid: k=10, p=1.0 (mean_acc=0.9680)\n"
      ]
     }
    ],
-   "execution_count": 20
+   "execution_count": 10
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-28T10:38:53.660319Z",
+     "start_time": "2025-10-28T10:38:53.653706Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "results",
+   "id": "a9fe83a7f1962908",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: {'linear': {'acc': 0.31543624161073824},\n",
+       "  'rbf': {'acc': 0.3087248322147651,\n",
+       "   'best_params': {'svc__C': 11.462107403425028,\n",
+       "    'svc__gamma': 0.003613894271216527}},\n",
+       "  'poly': {'acc': 0.3422818791946309,\n",
+       "   'best_params': {'svc__C': 79.15074397656205,\n",
+       "    'svc__degree': 2,\n",
+       "    'svc__gamma': 0.004207988669606633}},\n",
+       "  'sigmoid': {'acc': 0.3422818791946309,\n",
+       "   'best_params': {'svc__C': 0.3334792728637583,\n",
+       "    'svc__gamma': 0.0024586032763280045}}},\n",
+       " 2: {'linear': {'acc': 0.28187919463087246},\n",
+       "  'rbf': {'acc': 0.3087248322147651,\n",
+       "   'best_params': {'svc__C': 11.462107403425028,\n",
+       "    'svc__gamma': 0.003613894271216527}},\n",
+       "  'poly': {'acc': 0.3422818791946309,\n",
+       "   'best_params': {'svc__C': 79.15074397656205,\n",
+       "    'svc__degree': 2,\n",
+       "    'svc__gamma': 0.004207988669606633}},\n",
+       "  'sigmoid': {'acc': 0.3422818791946309,\n",
+       "   'best_params': {'svc__C': 0.3334792728637583,\n",
+       "    'svc__gamma': 0.0024586032763280045}}},\n",
+       " 3: {'linear': {'acc': 0.30201342281879195},\n",
+       "  'rbf': {'acc': 0.3087248322147651,\n",
+       "   'best_params': {'svc__C': 11.462107403425028,\n",
+       "    'svc__gamma': 0.003613894271216527}},\n",
+       "  'poly': {'acc': 0.3422818791946309,\n",
+       "   'best_params': {'svc__C': 79.15074397656205,\n",
+       "    'svc__degree': 2,\n",
+       "    'svc__gamma': 0.004207988669606633}},\n",
+       "  'sigmoid': {'acc': 0.3422818791946309,\n",
+       "   'best_params': {'svc__C': 0.3334792728637583,\n",
+       "    'svc__gamma': 0.0024586032763280045}}},\n",
+       " 4: {'linear': {'acc': 0.3624161073825503},\n",
+       "  'rbf': {'acc': 0.3087248322147651,\n",
+       "   'best_params': {'svc__C': 11.462107403425028,\n",
+       "    'svc__gamma': 0.003613894271216527}},\n",
+       "  'poly': {'acc': 0.3422818791946309,\n",
+       "   'best_params': {'svc__C': 79.15074397656205,\n",
+       "    'svc__degree': 2,\n",
+       "    'svc__gamma': 0.004207988669606633}},\n",
+       "  'sigmoid': {'acc': 0.3422818791946309,\n",
+       "   'best_params': {'svc__C': 0.3334792728637583,\n",
+       "    'svc__gamma': 0.0024586032763280045}}},\n",
+       " 5: {'linear': {'acc': 0.3087248322147651},\n",
+       "  'rbf': {'acc': 0.3087248322147651,\n",
+       "   'best_params': {'svc__C': 11.462107403425028,\n",
+       "    'svc__gamma': 0.003613894271216527}},\n",
+       "  'poly': {'acc': 0.3422818791946309,\n",
+       "   'best_params': {'svc__C': 79.15074397656205,\n",
+       "    'svc__degree': 2,\n",
+       "    'svc__gamma': 0.004207988669606633}},\n",
+       "  'sigmoid': {'acc': 0.3422818791946309,\n",
+       "   'best_params': {'svc__C': 0.3334792728637583,\n",
+       "    'svc__gamma': 0.0024586032763280045}}},\n",
+       " 6: {'linear': {'acc': 0.3087248322147651},\n",
+       "  'rbf': {'acc': 0.3087248322147651,\n",
+       "   'best_params': {'svc__C': 11.462107403425028,\n",
+       "    'svc__gamma': 0.003613894271216527}},\n",
+       "  'poly': {'acc': 0.3422818791946309,\n",
+       "   'best_params': {'svc__C': 79.15074397656205,\n",
+       "    'svc__degree': 2,\n",
+       "    'svc__gamma': 0.004207988669606633}},\n",
+       "  'sigmoid': {'acc': 0.3422818791946309,\n",
+       "   'best_params': {'svc__C': 0.3334792728637583,\n",
+       "    'svc__gamma': 0.0024586032763280045}}},\n",
+       " 7: {'linear': {'acc': 0.3087248322147651},\n",
+       "  'rbf': {'acc': 0.3087248322147651,\n",
+       "   'best_params': {'svc__C': 11.462107403425028,\n",
+       "    'svc__gamma': 0.003613894271216527}},\n",
+       "  'poly': {'acc': 0.3422818791946309,\n",
+       "   'best_params': {'svc__C': 79.15074397656205,\n",
+       "    'svc__degree': 2,\n",
+       "    'svc__gamma': 0.004207988669606633}},\n",
+       "  'sigmoid': {'acc': 0.3422818791946309,\n",
+       "   'best_params': {'svc__C': 0.3334792728637583,\n",
+       "    'svc__gamma': 0.0024586032763280045}}},\n",
+       " 8: {'linear': {'acc': 0.3087248322147651},\n",
+       "  'rbf': {'acc': 0.3087248322147651,\n",
+       "   'best_params': {'svc__C': 11.462107403425028,\n",
+       "    'svc__gamma': 0.003613894271216527}},\n",
+       "  'poly': {'acc': 0.3422818791946309,\n",
+       "   'best_params': {'svc__C': 79.15074397656205,\n",
+       "    'svc__degree': 2,\n",
+       "    'svc__gamma': 0.004207988669606633}},\n",
+       "  'sigmoid': {'acc': 0.3422818791946309,\n",
+       "   'best_params': {'svc__C': 0.3334792728637583,\n",
+       "    'svc__gamma': 0.0024586032763280045}}},\n",
+       " 9: {'linear': {'acc': 0.3087248322147651},\n",
+       "  'rbf': {'acc': 0.3422818791946309,\n",
+       "   'best_params': {'svc__C': 11.462107403425028,\n",
+       "    'svc__gamma': 0.003613894271216527}},\n",
+       "  'poly': {'acc': 0.3422818791946309,\n",
+       "   'best_params': {'svc__C': 79.15074397656205,\n",
+       "    'svc__degree': 2,\n",
+       "    'svc__gamma': 0.004207988669606633}},\n",
+       "  'sigmoid': {'acc': 0.3422818791946309,\n",
+       "   'best_params': {'svc__C': 0.3334792728637583,\n",
+       "    'svc__gamma': 0.0024586032763280045}}},\n",
+       " 10: {'linear': {'acc': 0.3087248322147651},\n",
+       "  'rbf': {'acc': 0.4228187919463087,\n",
+       "   'best_params': {'svc__C': 11.462107403425028,\n",
+       "    'svc__gamma': 0.003613894271216527}},\n",
+       "  'poly': {'acc': 0.3422818791946309,\n",
+       "   'best_params': {'svc__C': 79.15074397656205,\n",
+       "    'svc__degree': 2,\n",
+       "    'svc__gamma': 0.004207988669606633}},\n",
+       "  'sigmoid': {'acc': 0.3422818791946309,\n",
+       "   'best_params': {'svc__C': 0.3334792728637583,\n",
+       "    'svc__gamma': 0.0024586032763280045}}}}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 11
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "",
-   "id": "a9fe83a7f1962908",
    "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "source": "",
+   "id": "692da5a34ba6ebf7"
   }
  ],
  "metadata": {
