--- a/Sketch count.ipynb
+++ b/Sketch count.ipynb
@@ -284,13 +284,13 @@
     "n_out = 1\n",
     "n_hd = 10000\n",
     "k = 25\n",
-    "p = 1./5.  # set your flip probability\n",
-    "rng = np.random.default_rng(42)  # optional: for reproducibility\n",
+    "p = 1./5.  # flip probability\n",
+    "rng = np.random.default_rng(42)\n",
     "\n",
     "x_dense = data\n",
     "\n",
     "n_dense = x_dense.shape[1]\n",
-    "W_hd = np.random.binomial(n=1, p=0.05, size=(n_hd, n_dense))  # Test random sparse weights\n",
+    "W_hd = np.random.binomial(n=1, p=0.05, size=(n_hd, n_dense))\n",
     "x_hd = x_dense @ W_hd.T\n",
     "z_hd = np.where(np.argsort(x_hd) < k, 1., 0)\n",
     "W_out = np.zeros((n_out, n_hd))\n",
