--- a/Rapid inference.ipynb
+++ b/Rapid inference.ipynb
@@ -57,12 +57,30 @@
    "cell_type": "code",
    "source": [
     "from matplotlib.colors import ListedColormap\n",
+    "plt.rcParams['legend.fontsize'] = 12\n",
     "plt.rcParams.update({\n",
     "    \"font.size\": 12,\n",
+    "    \"font.family\": 'Helvetica',\n",
     "    \"axes.labelsize\": 12,\n",
     "    \"axes.titlesize\": 14,\n",
     "    \"legend.fontsize\": 12,\n",
-    "    \"font.family\": \"Helvetica\",\n",
+    "    \"xtick.labelsize\": 10,\n",
+    "    \"ytick.labelsize\": 10,\n",
+    "    \"axes.spines.top\": False,\n",
+    "    \"axes.spines.right\": False,\n",
+    "    \"axes.grid\": False,\n",
+    "\n",
+    "    \"lines.linewidth\": 1.5,     # default line width\n",
+    "    \"axes.linewidth\": 1.,      # axis spine width\n",
+    "    'xtick.major.width': 1.0,\n",
+    "    'ytick.major.width': 1.0,\n",
+    "    'xtick.major.size': 6,\n",
+    "    'ytick.major.size': 6,\n",
+    "    'xtick.minor.width': 1.0,\n",
+    "    'ytick.minor.width': 1.0,\n",
+    "\n",
+    "    \"hatch.linewidth\": 1.,   # make hatch strokes visible\n",
+    "\n",
     "})\n",
     "\n",
     "palette = ['#405cca', '#c23232', '#269f30', '#1d1d1d']\n",
