gridsearch mix setup

--- a/test.ipynb
+++ b/test.ipynb
@@ -18,14 +18,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-30T11:45:56.175997Z",
-     "start_time": "2025-11-30T11:45:56.068237Z"
+     "end_time": "2025-12-02T12:24:58.252217Z",
+     "start_time": "2025-12-02T12:24:58.161530Z"
     }
    },
    "cell_type": "code",
    "source": [
     "import matplotlib as mpl\n",
     "import matplotlib as mpl\n",
+    "\n",
     "print(mpl.get_configdir())\n",
     "print(mpl.rcParams[\"font.size\"])\n",
     "print(mpl.rcParams[\"axes.prop_cycle\"])\n",
@@ -39,11 +40,24 @@
      "text": [
       "/Users/ton/.matplotlib\n",
       "12.0\n",
-      "cycler('color', ['#31446e', '#e56c4b', '#878776', '#5ff5f0', '#000000'])\n"
+      "cycler('color', ['#405cca', '#c23232', '#269f30', '#5ff5f0', '#000000'])\n"
      ]
     }
    ],
    "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-02T12:24:58.256481Z",
+     "start_time": "2025-12-02T12:24:58.255400Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "c90e71bf1f4f4bfd",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -51,7 +65,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "c90e71bf1f4f4bfd"
+   "id": "563fb88f36ac551"
   }
  ],
  "metadata": {
