fixed buggy top-k

--- a/2. Texel parameter search.ipynb
+++ b/2. Texel parameter search.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-13T11:27:01.168705Z",
-     "start_time": "2026-02-13T11:27:01.160926Z"
+     "end_time": "2026-02-13T15:19:53.150381Z",
+     "start_time": "2026-02-13T15:19:53.143436Z"
     }
    },
    "cell_type": "code",
@@ -15,27 +15,27 @@
    ],
    "id": "7eab71dc98cccc02",
    "outputs": [],
-   "execution_count": 14
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-13T11:27:01.448604Z",
-     "start_time": "2026-02-13T11:27:01.445822Z"
+     "end_time": "2026-02-13T15:19:53.175775Z",
+     "start_time": "2026-02-13T15:19:53.173467Z"
     }
    },
    "cell_type": "code",
    "source": "file = 'params_texel'",
    "id": "c3db4840034abca4",
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 19
   },
   {
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2026-02-13T11:27:34.356511Z",
-     "start_time": "2026-02-13T11:27:34.091893Z"
+     "end_time": "2026-02-13T15:19:53.674690Z",
+     "start_time": "2026-02-13T15:19:53.180315Z"
     }
    },
    "cell_type": "code",
@@ -111,15 +111,20 @@
      }
     }
    ],
-   "execution_count": 17
+   "execution_count": 20
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-13T15:19:53.682391Z",
+     "start_time": "2026-02-13T15:19:53.681199Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "4325a4a14c6da2d3"
+   "id": "4325a4a14c6da2d3",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
