--- a/3. Texel parameter search.ipynb
+++ b/3. Texel parameter search.ipynb
@@ -116,7 +116,57 @@
   {
    "cell_type": "code",
    "id": "6mxeimurn88",
-   "source": "# --- Plot test accuracies from gridsearch_stochastic.py (s × k × p grid) ---\nwith open(f\"data/{file}.pkl\", \"rb\") as f:\n    d = pickle.load(f)\n\ns_arr = np.asarray(d[\"params\"][\"s\"])\nk_arr = np.asarray(d[\"params\"][\"k\"])\np_arr = np.asarray(d[\"params\"][\"p\"])\ntest_acc = np.asarray(d[\"results\"][\"test_acc\"], dtype=float)\n\nsu = np.unique(s_arr)\nku = np.unique(k_arr)\npu = np.unique(p_arr)\n\n# Average over folds for each (s, k, p) combination\ngrid_3d = np.full((su.size, ku.size, pu.size), np.nan)\nfor si, sv in enumerate(su):\n    for ki, kv in enumerate(ku):\n        for pi, pv in enumerate(pu):\n            mask = (s_arr == sv) & (k_arr == kv) & (p_arr == pv)\n            if mask.any():\n                grid_3d[si, ki, pi] = test_acc[mask].mean()\n\nncols = min(len(su), 3)\nnrows = int(np.ceil(len(su) / ncols))\nfig, axes = plt.subplots(nrows, ncols, figsize=(6 * ncols, 5 * nrows), squeeze=False)\n\nfor idx, sv in enumerate(su):\n    ax = axes[idx // ncols, idx % ncols]\n    im = ax.imshow(grid_3d[idx], aspect=\"auto\", vmin=np.nanmin(grid_3d), vmax=np.nanmax(grid_3d))\n    ax.set_xticks(np.arange(pu.size))\n    ax.set_xticklabels([f\"{v:.3f}\" for v in pu], rotation=45, ha=\"right\")\n    ax.set_yticks(np.arange(ku.size))\n    ax.set_yticklabels(ku.astype(int))\n    ax.set_xlabel(\"p\")\n    ax.set_ylabel(\"k\")\n    ax.set_title(f\"s = {sv:.3f}\")\n    for i in range(ku.size):\n        for j in range(pu.size):\n            if np.isfinite(grid_3d[idx, i, j]):\n                ax.text(j, i, f\"{grid_3d[idx, i, j]:.2f}\", ha=\"center\", va=\"center\", fontsize=7)\n\n# Hide unused subplots\nfor idx in range(len(su), nrows * ncols):\n    axes[idx // ncols, idx % ncols].set_visible(False)\n\nfig.colorbar(im, ax=axes.ravel().tolist(), label=\"Mean test accuracy\", shrink=0.8)\nfig.suptitle(\"Stochastic gridsearch: test accuracy (k × p) per s\", fontsize=14)\nplt.tight_layout()\nplt.show()",
+   "source": [
+    "# --- Plot test accuracies from gridsearch_single.py (s × k × p grid) ---\n",
+    "with open(f\"data/{file}.pkl\", \"rb\") as f:\n",
+    "    d = pickle.load(f)\n",
+    "\n",
+    "s_arr = np.asarray(d[\"params\"][\"s\"])\n",
+    "k_arr = np.asarray(d[\"params\"][\"k\"])\n",
+    "p_arr = np.asarray(d[\"params\"][\"p\"])\n",
+    "test_acc = np.asarray(d[\"results\"][\"test_acc\"], dtype=float)\n",
+    "\n",
+    "su = np.unique(s_arr)\n",
+    "ku = np.unique(k_arr)\n",
+    "pu = np.unique(p_arr)\n",
+    "\n",
+    "# Average over folds for each (s, k, p) combination\n",
+    "grid_3d = np.full((su.size, ku.size, pu.size), np.nan)\n",
+    "for si, sv in enumerate(su):\n",
+    "    for ki, kv in enumerate(ku):\n",
+    "        for pi, pv in enumerate(pu):\n",
+    "            mask = (s_arr == sv) & (k_arr == kv) & (p_arr == pv)\n",
+    "            if mask.any():\n",
+    "                grid_3d[si, ki, pi] = test_acc[mask].mean()\n",
+    "\n",
+    "ncols = min(len(su), 3)\n",
+    "nrows = int(np.ceil(len(su) / ncols))\n",
+    "fig, axes = plt.subplots(nrows, ncols, figsize=(6 * ncols, 5 * nrows), squeeze=False)\n",
+    "\n",
+    "for idx, sv in enumerate(su):\n",
+    "    ax = axes[idx // ncols, idx % ncols]\n",
+    "    im = ax.imshow(grid_3d[idx], aspect=\"auto\", vmin=np.nanmin(grid_3d), vmax=np.nanmax(grid_3d))\n",
+    "    ax.set_xticks(np.arange(pu.size))\n",
+    "    ax.set_xticklabels([f\"{v:.3f}\" for v in pu], rotation=45, ha=\"right\")\n",
+    "    ax.set_yticks(np.arange(ku.size))\n",
+    "    ax.set_yticklabels(ku.astype(int))\n",
+    "    ax.set_xlabel(\"p\")\n",
+    "    ax.set_ylabel(\"k\")\n",
+    "    ax.set_title(f\"s = {sv:.3f}\")\n",
+    "    for i in range(ku.size):\n",
+    "        for j in range(pu.size):\n",
+    "            if np.isfinite(grid_3d[idx, i, j]):\n",
+    "                ax.text(j, i, f\"{grid_3d[idx, i, j]:.2f}\", ha=\"center\", va=\"center\", fontsize=7)\n",
+    "\n",
+    "# Hide unused subplots\n",
+    "for idx in range(len(su), nrows * ncols):\n",
+    "    axes[idx // ncols, idx % ncols].set_visible(False)\n",
+    "\n",
+    "fig.colorbar(im, ax=axes.ravel().tolist(), label=\"Mean test accuracy\", shrink=0.8)\n",
+    "fig.suptitle(\"Stochastic gridsearch: test accuracy (k × p) per s\", fontsize=14)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ],
    "metadata": {},
    "execution_count": null,
    "outputs": []
